Fix UI mounting in jar and broken style on create page

--- a/src/scss/views/_simulator.scss
+++ b/src/scss/views/_simulator.scss
@@ -7,7 +7,7 @@
         }
     }
 
-    .simulator-edit {
+    .simulator-edit, .simulator-create {
         .form-field {
             display: flex;
             flex-direction: column;
